log
Fri 29 Mar 2024 07:15:22 PM UTC: 
 tests:  0|6
total_score: 0/70
7109416
Fri 29 Mar 2024 07:20:06 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8a513ba
Fri 29 Mar 2024 07:20:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f40934f
Fri 29 Mar 2024 08:11:13 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:26: error: expected ‘;’ before ‘}’ token
   49 |   return list->head->data
      |                          ^
      |                          ;
   50 | }
      | ~                         
Compilation failed
d5d4400
Fri 29 Mar 2024 08:11:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
52f3cd5
Fri 29 Mar 2024 08:13:43 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
b9d0453
Fri 29 Mar 2024 08:15:36 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c:89:1: error: expected identifier or ‘(’ before numeric constant
   89 | 1
      | ^
Compilation failed
c630281
Fri 29 Mar 2024 08:18:55 PM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 15/70
96ad624
Fri 29 Mar 2024 08:25:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
c6a255f
Fri 29 Mar 2024 08:27:52 PM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
ea786d7
Fri 29 Mar 2024 08:28:37 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|5
total_score: 15/70
b5c359b
